fixed footer covering content

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
-    padding-top: 2%;
-    padding-left: 2%;
+    padding-top: 1%;
+    padding-left: 1%;
     height: 50px;
     width: 100%;
     position: sticky;
@@ -19,7 +19,7 @@
       color: #ffffff;
       padding: 10px;
       border-radius: 5px;
-      font-size: 20px;
+      font-size: 26px;
       font-weight:lighter ;
       text-align: center;
       text-decoration: none;
