--- a/src/styles/screen_sizes.css
+++ b/src/styles/screen_sizes.css
@@ -1,17 +1,26 @@
-@media ( max-width: 600px ){
+@media only screen and (max-width: 600px){
+    /* body{
+        padding-bottom: 50px;
+    } */
     .header-content {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
-        /* justify-content: space-evenly;
-        align-items: center;
-        align-content: center; */
+        align-items: center;    
     }
     footer {
-        position: fixed;
+        display: flex;
+        justify-content: space-around;
+        position: static;
         bottom: 0;
         width: 100%;
+        height: 50px;
+    }
+    .footer p{
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        text-align: center;
     }
 
 }
