--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
 }
-html, body{
+body{
     margin: 0;
     padding: 0;
     background-color: #E0EBF5;
@@ -41,6 +41,7 @@ html, body{
 }
 .section-2{
     text-align: center;
+    padding-bottom: 50px;
 }
 .section-2 h2{
     text-decoration: underline;
@@ -87,20 +88,22 @@ footer{
     justify-content: space-evenly;
     align-items: end;
     background-color: #8A00F3;
-    position: absolute;
-    bottom: 0;
+    position: static;
     width: 100%;
     border-radius: 10px;
-}     
-.footer p{
-    /* background-color: #8A00F3; */
     color: #E0EBF5;
-    padding: 10px;
-    margin: 5px;
-    border: 5px;
     text-align: center;
     font-weight: bold;
     text-shadow: -2px 2px 4px #170A1C;
+}     
+.footer p{
+    color: #E0EBF5;
+    /* padding: 10px; */
+    /* margin: 5px; */
+    /* border: 5px; */
+    /* text-align: center;
+    font-weight: bold;
+    text-shadow: -2px 2px 4px #170A1C; */
 }
 
 
